--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,14 @@ body {
     height: 200px;
 }
 
+ .container
+ {
+     max-width: 800;
+    padding-top: 50px;
+    margin: 0 auto;
+    color: gray;
+    padding-left: 50;
+    padding-right: 20;
+    background-color: floralwhite;
+            
+}
